# q4wine

./: .gitignore  AUTHORS  AUTHORS.md  CMakeCache.txt  CMakeLists.txt  COPYING  ChangeLog  Changelog.md  Doxyfile  INSTALL  Makefile  Q4Wine.pro  README  README.md  SEMDEBUG.TXT  TODO  changelog  changelog~  cleanup.sh  cmake_install.cmake  config.h  config.h.cmake  config.h.in  config.sh  description-pak  lupdate.pro  nlnotes.adr  q4wine.cbp  q4wine.desktop  q4wine.kdevelop  q4wine.kdevelop.pcs  q4wine.kdevses  q4wine.pro  q4wine_fr.ts  qdevelop-settings.db  qrc_q4wine.cxx  sample.xml  ua.org.brezblock.q4wine.appdata.xml  ui_About.h  ui_AppSettings.h  (+10 more)
src/: About.ui  AppSettings.ui  CMakeLists.txt  IconSettings.ui  IconsView.ui  ImageManager.ui  MainWindow.ui  Makefile  PrefixSettings.ui  Process.ui  Run.ui  Wizard.ui  cmake_install.cmake  commandline.cpp  commandline.h  initdb.h  k4wine.qrc  main.cpp  main.cpp~  moc_winetricks.cxx  q4wine.qrc  qrc_q4wine.cxx  src.pro  ui_About.h  ui_AppInfoWidget.h  ui_AppSettings.h  ui_AppTestWidget.h  ui_CommentWidget.h  ui_IconSettings.h  ui_IconsView.h  ui_ImageManager.h  ui_MainWindow.h  ui_PrefixSettings.h  ui_Process.h  ui_Run.h  ui_WineDriveDialog.h  ui_Wizard.h  version.cmake
src/appdb-export/xmlexport/: Doxyfile  INSTALL  LICENSE  README  index.php
src/cli/: CMakeLists.txt  main.cpp
src/core/: appdbstructs.h  commandline.cpp~  coremethods.cpp  coremethods.cpp~  coremethods.h  coremethods.h~  httpcore.cpp  httpcore.h  moc_httpcore.cxx  moc_registry.cxx  moc_winebinlauncher.cxx  moc_xmlparser.cxx  registry.cpp  registry.h  winebinlauncher.cpp  winebinlauncher.h  xmlparser.cpp  xmlparser.h
src/core/database/: db.cpp  db.h  dir.cpp  dir.h  icon.cpp  icon.h  image.cpp  image.h  initdb.h  last_run_icon.cpp  last_run_icon.h  logging.cpp  logging.h  prefix.cpp  prefix.h  sysconfig.cpp  sysconfig.h  table.cpp  table.h  versions.cpp  versions.h
src/curses/: CMakeLists.txt  main.cpp
src/darwin/: ps.c  ps.h
src/data/: CMakeLists.txt  Makefile  cmake_install.cmake  q4wine-ambiance.svgz  q4wine.svgz  wine.svgz  winetricks_help
src/data/wine/: AUTHORS  COPYING
src/efl/: CMakeLists.txt  main.cpp
src/fltk/: CMakeLists.txt  main.cpp
src/freebsd/: CMakeLists.txt  mount_image.sh  umount.sh  umount_freebsd.sh
src/fuseiso/: AUTHORS  ChangeLog  NEWS  README
src/fuseiso/src/: CMakeLists.txt  fuseiso.c  isofs.c  isofs.h
src/gtk/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.hpp
src/gtk/ui/: mainwindow.glade
src/gui/: CMakeLists.txt  about.cpp  about.h  appsettings.cpp  appsettings.h  draglistwidget.cpp  draglistwidget.h  iconsettings.cpp  iconsettings.cpp~  iconsettings.h  iconsview.cpp  iconsview.h  imagemanager.cpp  imagemanager.h  main.cpp  mainwindow.cpp  mainwindow.cpp~  mainwindow.h  mainwindow.h~  moc_about.cxx  moc_appsettings.cxx  moc_iconsettings.cxx  moc_iconsview.cxx  moc_imagemanager.cxx  moc_mainwindow.cxx  moc_prefixsettings.cxx  moc_process.cxx  moc_run.cxx  moc_wizard.cxx  prefixsettings.cpp  prefixsettings.h  process.cpp  process.h  run.cpp  run.h  wizard.cpp  wizard.cpp~  wizard.h
src/i18n/: [M  CMakeLists.txt  Makefile  cmake_install.cmake  cs_cz.ts  de_de.ts  en_us.qm  en_us.ts  es_es.ts  he_il.ts  it_it.ts  pl_pl.ts  pt_BR.ts  pt_br.ts  q4wine_af_za.ts  q4wine_cs_cz.ts  q4wine_de_de.ts  q4wine_en_us.ts  q4wine_es_es.ts  q4wine_fa.ts  q4wine_fa_ir.ts  q4wine_he.ts  q4wine_he_il.ts  q4wine_it_it.ts  q4wine_ja.ts  q4wine_pl_pl.ts  q4wine_pt_br.ts  q4wine_ru_ru.ts  q4wine_uk_ua.ts  q4wine_zh_CN.ts  q4wine_zh_tw.ts  ru_ru.qm  ru_ru.ts  uk_ua.qm  uk_ua.ts
src/icons/: CMakeLists.txt  Info.plist  q4wine-128x128.icns  q4wine-350x350.icns  q4wine-350x350.xcf  q4wine-48x48.icns  q4wine-48x48.xcf
src/l10n/: CMakeLists.txt  q4wine_af.ts  q4wine_cs.ts  q4wine_de.ts  q4wine_en.ts  q4wine_es.ts  q4wine_fa.ts  q4wine_fr.ts  q4wine_he.ts  q4wine_it.ts  q4wine_ja.ts  q4wine_nl.ts  q4wine_pl.ts  q4wine_pt_BR.ts  q4wine_ru.ts  q4wine_uk.ts  q4wine_zh_CN.ts  q4wine_zh_TW.ts
src/lib/: CMakeLists.txt  db.cpp  db.hpp  dbobject.cpp  dbobject.hpp  defines.hpp  dir.cpp  dir.hpp  wineapplication.cpp  wineapplication.hpp  wineprefix.cpp  wineprefix.hpp  wineversion.cpp  wineversion.hpp
src/lib/test/: CMakeLists.txt  test_dbengine.cpp  test_q4winelib.cpp  test_wineobjects.cpp
src/man1/: CMakeLists.txt  q4wine-cli.1  q4wine-helper.1  q4wine.1
src/plugins/: CMakeLists.txt  sysmenu.cpp  sysmenu.h  winetricks.cpp  winetricks.h  winetricks.ui
src/q4wine-cli/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  main.h  q4wine-cli.cpp  q4wine-cli.h
src/q4wine-gui/: CMakeLists.txt  Makefile  about.cpp  about.h  appdbsearchwidget.cpp  appdbsearchwidget.h  appsettings.cpp  appsettings.h  authors.h  authors.yaml  cmake_install.cmake  fakedrivesettings.cpp  fakedrivesettings.h  iconsettings.cpp  iconsettings.h  iconsview.cpp  iconsview.h  imagemanager.cpp  imagemanager.h  infodialog.cpp  infodialog.h  mainwindow.cpp  mainwindow.h  prefixsettings.cpp  prefixsettings.h  process.cpp  process.h  progress.cpp  progress.h  run.cpp  run.h  sysmenu.cpp  sysmenu.h  versions.cpp  versions.h  winedrivedialog.cpp  winedrivedialog.h  wizard.cpp  wizard.h
src/q4wine-gui/uis/: About.ui  AppDBAppVersionWidget.ui  AppInfoWidget.ui  (+18 more)
src/q4wine-helper/: CMakeLists.txt  q4wine-helper.cpp  q4wine-helper.h  wineobject.cpp  wineobject.h
src/q4wine-lib/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  main.h  q4wine-lib.cpp  q4wine-lib.h
src/qt/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.hpp
src/qtsingleapplication/: CMakeLists.txt  Makefile  cmake_install.cmake  qtlocalpeer.cpp  qtlocalpeer.h  qtlockedfile.cpp  qtlockedfile.h  qtlockedfile_win.cpp
src/temporary/: moc_winetricks.cxx  winetricks.cpp  winetricks.cpp~  winetricks.h  winetricks.ui  winetrickshelp.cpp  winetrickshelp.h  winetrickshelp.ui
src/theme/: CMakeLists.txt  Makefile  cmake_install.cmake
src/uis/: About.ui  AppSettings.ui  IconSettings.ui  ImageManager.ui  MainWindow.ui  PrefixSettings.ui  Run.ui  Wizard.ui
src/wis/: wisitem.cpp  wisitem.h
(+272 files in other folders)
